--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mc2-be",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/index.js",
@@ -18,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.0.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
