--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "mc2-be",
   "version": "1.0.0",
   "description": "",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/index.js",
     "build": "tsc",
     "dev": "nodemon ./src/index.ts",
-    "prestart": "npm run build"
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,15 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.0.4"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.2",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
