--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"orgId":"team_VGkUSYWN3Dkd3iy6Dc2q3K58","projectId":"prj_QVHZ6TDn5NlvEGqMybAsnCVQSPdq"}
+{"projectId":"prj_BM4HsbUSnoekccZIkpfofkb6AyCM","orgId":"team_VGkUSYWN3Dkd3iy6Dc2q3K58"}
